スキーマのアップデートとCreate Communityの実装 (#121)
* Update schema

* create comunityの実装

* Fix
